# cellpose-adapt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_3d.py
cellpose_adapt/: README.md  __init__.py  auto_ml.py  caching.py  config.py  core.py  file_io.py  hash.py  io.py  logging_config.py  main.py  metrics.py  optimization.py  utils.py  visualization.py  viz.py
cluster/: eval_optimization.sbatch  optimization.sbatch  run_membrane_optimization.sh  run_mt_optimization.sh  run_nuclei_optimization.sh
configs/: best_bacteria_2d_study_v2_config.json  best_mt_2d_study_config.json  best_organoid_3d_nuclei_20231108_config.json  best_organoid_3d_nuclei_20240220_config.json  best_organoid_3d_nuclei_20240305_config.json  best_organoid_3d_nuclei_20240701_config.json  best_organoid_3d_nuclei_study_config.json  mt_2d_config.json
experiments/: data.py  eval.py  experiments_2d.py  experiments_3d.py  main.py  optimization.py  optimize.py  optimize_2d.py  optimize_3d.py  results.py  setup.py  viz_2d.py
fip_cellpose/: README.md  viz.py
project_configs/: amr_2d_experiment.json  bacteria_2d_experiment.json  mt_2d_experiment.json  organoid_3d_membranes.json  organoid_3d_nuclei.json
sbatch/: cellprob.sbatch  channel.sbatch  diameter.sbatch  min_size.sbatch  model.sbatch  normalization.sbatch  optimization.sbatch  parameter_optimization.sbatch  run_all_jobs.sh  run_membrane_optimization.sh  run_nuclei_optimization.sh  run_optimization.sh  smoothing.sbatch  stitch.sbatch  tile.sbatch
scripts/: analyze_study.py  generate_report.py  process_all.sh  scan_data.py  (+6 more)
(+90 files in other folders)
